added FixedWith Bean converter to String.  Added Map to JsonUtility